@@ -3,6 +3,7 @@ package com.coagronet.rolpermiso.services;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -15,11 +16,14 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.coagronet.auditoria.AuthenticationService;
+import com.coagronet.empresa.Empresa;
 import com.coagronet.empresarol.EmpresaRol;
 import com.coagronet.empresarol.repositories.EmpresaRolRepository;
 import com.coagronet.estado.Estado;
-import com.coagronet.estado.repositories.EstadoRepository;
 import com.coagronet.metodo.repositories.MetodoRepository;
+import com.coagronet.modulo.Modulo;
+import com.coagronet.moduloempresa.ModuloEmpresa;
+import com.coagronet.moduloempresa.repositories.ModuloEmpresaRepository;
 import com.coagronet.permiso.Permiso;
 import com.coagronet.permiso.repositories.PermisoRepository;
 import com.coagronet.rolpermiso.RolPermiso;
@@ -56,9 +60,7 @@ public class RolPermisoService {
 
 	private final AuthenticationService authenticationService;
 
-	private final EstadoRepository estadoRepository; // Kept just in case you use it
-														// elsewhere, though it's no
-														// longer strictly needed here.
+	private final ModuloEmpresaRepository moduloEmpresaRepository;
 
 	/**
 	 * Obtiene módulos disponibles con sus permisos agrupados, con paginación. Optimizado
@@ -114,40 +116,54 @@ public class RolPermisoService {
 	}
 
 	/**
-	 * Obtiene módulos agrupados con permisos filtrando por uno o varios ids de
-	 * subsistema. Devuelve lista sin paginación para selección UI a nivel de subsistema.
-	 * Útil para que el admin de empresa seleccione subsistemas y luego vea todos sus
-	 * módulos para elegir permisos individuales.
+	 * Implementa el patrón Unit of Work en modo solo lectura. Según la documentación de
+	 * Spring Data Access, readOnly = true optimiza el rendimiento al deshabilitar el
+	 * dirty-checking (flushing) de Hibernate, ahorrando CPU y memoria.
 	 */
 	@Transactional(readOnly = true)
 	public List<ModuloPermisoResponse> getModulosBySubsistemas(List<Long> subsistemaIds) {
-		List<Long> moduloIds = permisoRepository.findDistinctModuloIdsBySubsistemas(subsistemaIds);
 
-		return moduloIds.stream().map(moduloId -> {
-			List<Permiso> permisosModulo = permisoRepository.findPermisosByModuloId(moduloId);
-			if (permisosModulo.isEmpty())
-				return null;
+		// 1. Unica ida a la base de datos
+		List<Permiso> permisosAsignables = permisoRepository
+			.findPermisosActivosAdminEmpresaBySubsistemas(subsistemaIds);
 
-			Permiso primerPermiso = permisosModulo.getFirst();
-			List<ModuloPermisoResponse.PermisoDTO> permisosDTO = permisosModulo.stream()
+		// 2. Agrupación en memoria
+		Map<Modulo, List<Permiso>> permisosPorModulo = permisosAsignables.stream()
+			.collect(Collectors.groupingBy(Permiso::getModulo));
+
+		// 3. Transformación al DTO de salida
+		return permisosPorModulo.entrySet().stream().map(entry -> {
+			Modulo modulo = entry.getKey();
+			List<Permiso> permisosDelModulo = entry.getValue();
+
+			List<ModuloPermisoResponse.PermisoDTO> permisosDTO = permisosDelModulo.stream()
 				.map(p -> new ModuloPermisoResponse.PermisoDTO(p.getId(), p.getNombre(), p.getAutoridad(),
 						p.getMetodo() != null ? p.getMetodo().getNombre() : null, p.getUri()))
 				.toList();
 
 			return ModuloPermisoResponse.builder()
-				.moduloId(moduloId)
-				.moduloNombre(primerPermiso.getModulo().getNombre())
-				.moduloUrl(primerPermiso.getModulo().getUrl())
-				.moduloDescripcion(primerPermiso.getModulo().getDescripcion())
-				.moduloIcon(primerPermiso.getModulo().getIcon())
+				.moduloId(modulo.getId())
+				.moduloNombre(modulo.getNombre())
+				.moduloUrl(modulo.getUrl())
+				.moduloDescripcion(modulo.getDescripcion())
+				.moduloIcon(modulo.getIcon())
 				.permisos(permisosDTO)
 				.build();
-		}).filter(m -> m != null).toList();
+		}).sorted(Comparator.comparing(ModuloPermisoResponse::getModuloNombre)).toList();
 	}
 
 	@Transactional(readOnly = true)
 	public List<Permiso> getPermisosByEmpresaRol(Long rolId) {
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		return getPermisosByEmpresaRol(rolId, empresaId);
+	}
+
+	@Transactional(readOnly = true)
+	public List<Permiso> getPermisosByEmpresaRol(Long rolId, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
+
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
 		return rolPermisoRepository.findPermisosByEmpresaRolId(empresaRol.getId());
@@ -161,38 +177,50 @@ public class RolPermisoService {
 	 */
 	@Transactional
 	public RolPermisoAsignadoResponse asignarModulosPermisos(Long rolId, List<Long> modulosIds) {
-
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		return asignarModulosPermisos(rolId, modulosIds, empresaId);
+	}
+
+	@Transactional
+	public RolPermisoAsignadoResponse asignarModulosPermisos(Long rolId, List<Long> modulosIds, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
 
 		// Validar que el rol existe y está activo en la empresa
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
 		// Obtener TODOS los permisos de los módulos seleccionados
-		List<Permiso> permisos = permisoRepository.findPermisosByModulosIds(modulosIds);
+		List<Permiso> permisos = permisoRepository.findPermisosByModulosIdsAndAdminEmpresaTrue(modulosIds);
 
 		if (permisos.isEmpty()) {
 			throw new RuntimeException("No se encontraron permisos para los módulos seleccionados");
 		}
 
+		asegurarModuloEmpresaActivo(empresaId, permisos);
+
 		// Obtener estado activo y usuario actual
 		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
 		User currentUser = authenticationService.getAuthenticatedUser();
 
-		// Asignar cada permiso al rol
-		permisos.forEach(permiso -> {
-			// Evitar duplicados
-			if (!rolPermisoRepository.existsByEmpresaRolIdAndPermisoId(empresaRol.getId(), permiso.getId())) {
-				RolPermiso rolPermiso = RolPermiso.builder()
-					.empresaRol(empresaRol)
-					.permiso(permiso)
-					.estado(estadoActivo)
-					.createdBy(currentUser)
-					.createdAt(Instant.now())
-					.build();
+		List<Long> validPermisoIds = permisos.stream().map(Permiso::getId).toList();
+		Set<Long> permisosYaAsignados = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), validPermisoIds);
 
-				rolPermisoRepository.save(rolPermiso);
-			}
-		});
+		List<RolPermiso> nuevosPermisos = permisos.stream()
+			.filter(permiso -> !permisosYaAsignados.contains(permiso.getId()))
+			.map(permiso -> RolPermiso.builder()
+				.empresaRol(empresaRol)
+				.permiso(permiso)
+				.estado(estadoActivo)
+				.createdBy(currentUser)
+				.createdAt(Instant.now())
+				.build())
+			.toList();
+
+		if (!nuevosPermisos.isEmpty()) {
+			rolPermisoRepository.saveAll(nuevosPermisos);
+		}
 
 		// Preparar respuesta con confirmación visual
 		List<String> modulos = permisos.stream().map(p -> p.getModulo().getNombre()).distinct().toList();
@@ -202,7 +230,7 @@ public class RolPermisoService {
 		return RolPermisoAsignadoResponse.builder()
 			.rolId(empresaRol.getRol().getId())
 			.rolNombre(empresaRol.getRol().getNombre())
-			.permisosAsignados(permisos.size())
+			.permisosAsignados(nuevosPermisos.size())
 			.modulos(modulos)
 			.autoridades(autoridades)
 			.build();
@@ -216,9 +244,17 @@ public class RolPermisoService {
 	public RolPermisoAsignadoResponse asignarModulosPermisosLectura(Long rolId, List<Long> modulosIds) {
 
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		return asignarModulosPermisosLectura(rolId, modulosIds, empresaId);
+	}
+
+	@Transactional
+	public RolPermisoAsignadoResponse asignarModulosPermisosLectura(Long rolId, List<Long> modulosIds, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
-		List<Permiso> permisos = permisoRepository.findPermisosByModulosIds(modulosIds)
+		List<Permiso> permisos = permisoRepository.findPermisosByModulosIdsAndAdminEmpresaTrue(modulosIds)
 			.stream()
 			.filter(p -> (p.getMetodo() != null && "GET".equalsIgnoreCase(p.getMetodo().getNombre()))
 					|| (p.getAutoridad() != null && p.getAutoridad().toUpperCase().contains("READ")))
@@ -228,22 +264,29 @@ public class RolPermisoService {
 			throw new RuntimeException("No se encontraron permisos de lectura para los módulos seleccionados");
 		}
 
+		asegurarModuloEmpresaActivo(empresaId, permisos);
+
 		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
 		User currentUser = authenticationService.getAuthenticatedUser();
 
-		permisos.forEach(permiso -> {
-			if (!rolPermisoRepository.existsByEmpresaRolIdAndPermisoId(empresaRol.getId(), permiso.getId())) {
-				RolPermiso rolPermiso = RolPermiso.builder()
-					.empresaRol(empresaRol)
-					.permiso(permiso)
-					.estado(estadoActivo)
-					.createdBy(currentUser)
-					.createdAt(Instant.now())
-					.build();
+		List<Long> validPermisoIds = permisos.stream().map(Permiso::getId).toList();
+		Set<Long> permisosYaAsignados = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), validPermisoIds);
 
-				rolPermisoRepository.save(rolPermiso);
-			}
-		});
+		List<RolPermiso> nuevosPermisos = permisos.stream()
+			.filter(permiso -> !permisosYaAsignados.contains(permiso.getId()))
+			.map(permiso -> RolPermiso.builder()
+				.empresaRol(empresaRol)
+				.permiso(permiso)
+				.estado(estadoActivo)
+				.createdBy(currentUser)
+				.createdAt(Instant.now())
+				.build())
+			.toList();
+
+		if (!nuevosPermisos.isEmpty()) {
+			rolPermisoRepository.saveAll(nuevosPermisos);
+		}
 
 		List<String> modulos = permisos.stream().map(p -> p.getModulo().getNombre()).distinct().toList();
 
@@ -252,7 +295,7 @@ public class RolPermisoService {
 		return RolPermisoAsignadoResponse.builder()
 			.rolId(empresaRol.getRol().getId())
 			.rolNombre(empresaRol.getRol().getNombre())
-			.permisosAsignados(permisos.size())
+			.permisosAsignados(nuevosPermisos.size())
 			.modulos(modulos)
 			.autoridades(autoridades)
 			.build();
@@ -260,20 +303,30 @@ public class RolPermisoService {
 
 	@Transactional
 	public void asignarPermisosAEmpresaRol(Long rolId, List<Long> permisoIds) {
+		if (permisoIds == null || permisoIds.isEmpty())
+			return;
 
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
-
 		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
 		User currentUser = authenticationService.getAuthenticatedUser();
 
-		List<Permiso> permisos = permisoRepository.findAllById(permisoIds);
+		// 1. Extraer permisos válidos de DB
+		List<Permiso> permisos = permisoRepository.findByIdInAndAdminEmpresaTrue(permisoIds);
 
-		// Combina la validación de duplicados con el guardado en lote (saveAll) para
-		// mayor rendimiento
+		if (permisos.isEmpty())
+			return;
+
+		asegurarModuloEmpresaActivo(empresaId, permisos);
+
+		// 2. OPTIMIZACIÓN: Extraer IDs de permisos ya asignados en 1 sola consulta
+		List<Long> validPermisoIds = permisos.stream().map(Permiso::getId).toList();
+		Set<Long> permisosYaAsignados = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), validPermisoIds);
+
+		// 3. Filtrado en memoria y construcción de Entidades
 		List<RolPermiso> nuevosPermisos = permisos.stream()
-			.filter(permiso -> !rolPermisoRepository.existsByEmpresaRolIdAndPermisoId(empresaRol.getId(),
-					permiso.getId()))
+			.filter(permiso -> !permisosYaAsignados.contains(permiso.getId()))
 			.map(permiso -> RolPermiso.builder()
 				.empresaRol(empresaRol)
 				.permiso(permiso)
@@ -281,8 +334,72 @@ public class RolPermisoService {
 				.createdBy(currentUser)
 				.createdAt(Instant.now())
 				.build())
-			.collect(Collectors.toList());
+			.toList();
 
+		// 4. Inserción por lotes (Unit of Work via @Transactional)
+		if (!nuevosPermisos.isEmpty()) {
+			rolPermisoRepository.saveAll(nuevosPermisos);
+		}
+	}
+
+	/**
+	 * Asigna permisos individuales a un rol de empresa.
+	 * Versión NUEVA que acepta empresaId como parámetro explícito.
+	 * 
+	 * Soporta dos casos de uso:
+	 * 1. ADMINISTRADOR_EMPRESA: empresaId viene resuelto del contexto
+	 * 2. ADMINISTRADOR_SISTEMA: empresaId viene del parámetro de la solicitud
+	 *
+	 * @param rolId ID del rol al cual asignar permisos
+	 * @param permisoIds Lista de IDs de permisos a asignar
+	 * @param empresaId ID de la empresa a la cual pertenece el rol (REQUERIDO)
+	 * 
+	 * @throws IllegalArgumentException si empresaId es null o permisos list está vacía
+	 * @throws EntityNotFoundException si rol o empresa no existen
+	 */
+	@Transactional
+	public void asignarPermisosAEmpresaRolWithEmpresaId(Long rolId, List<Long> permisoIds, Long empresaId) {
+		if (permisoIds == null || permisoIds.isEmpty())
+			return;
+
+		// ============================================================
+		// VALIDACIÓN CRÍTICA: empresaId no puede ser null
+		// ============================================================
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
+
+		// Validar que el rol existe y pertenece a la empresa especificada
+		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
+		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
+		User currentUser = authenticationService.getAuthenticatedUser();
+
+		// 1. Extraer permisos válidos de DB
+		List<Permiso> permisos = permisoRepository.findByIdInAndAdminEmpresaTrue(permisoIds);
+
+		if (permisos.isEmpty())
+			return;
+
+		asegurarModuloEmpresaActivo(empresaId, permisos);
+
+		// 2. OPTIMIZACIÓN: Extraer IDs de permisos ya asignados en 1 sola consulta
+		List<Long> validPermisoIds = permisos.stream().map(Permiso::getId).toList();
+		Set<Long> permisosYaAsignados = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), validPermisoIds);
+
+		// 3. Filtrado en memoria y construcción de Entidades
+		List<RolPermiso> nuevosPermisos = permisos.stream()
+			.filter(permiso -> !permisosYaAsignados.contains(permiso.getId()))
+			.map(permiso -> RolPermiso.builder()
+				.empresaRol(empresaRol)
+				.permiso(permiso)
+				.estado(estadoActivo)
+				.createdBy(currentUser)
+				.createdAt(Instant.now())
+				.build())
+			.toList();
+
+		// 4. Inserción por lotes (Unit of Work via @Transactional)
 		if (!nuevosPermisos.isEmpty()) {
 			rolPermisoRepository.saveAll(nuevosPermisos);
 		}
@@ -294,9 +411,18 @@ public class RolPermisoService {
 	@Transactional
 	public void quitarModulosPermisos(Long rolId, List<Long> modulosIds) {
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		quitarModulosPermisos(rolId, modulosIds, empresaId);
+	}
+
+	@Transactional
+	public void quitarModulosPermisos(Long rolId, List<Long> modulosIds, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
+
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
-		List<Permiso> permisos = permisoRepository.findPermisosByModulosIds(modulosIds);
+		List<Permiso> permisos = permisoRepository.findPermisosByModulosIdsAndAdminEmpresaTrue(modulosIds);
 		List<Long> permisoIds = permisos.stream().map(Permiso::getId).collect(Collectors.toList());
 
 		if (!permisoIds.isEmpty()) {
@@ -316,8 +442,17 @@ public class RolPermisoService {
 	@Transactional
 	public RolPermisoAsignadoResponse reemplazarPermisoDeEmpresaRol(Long rolId, Long permisoIdActual,
 			Long nuevoPermisoId) {
-
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		return reemplazarPermisoDeEmpresaRol(rolId, permisoIdActual, nuevoPermisoId, empresaId);
+	}
+
+	@Transactional
+	public RolPermisoAsignadoResponse reemplazarPermisoDeEmpresaRol(Long rolId, Long permisoIdActual,
+			Long nuevoPermisoId, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
+
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
 		// Validar que el permiso actual existe y está asignado
@@ -336,8 +471,10 @@ public class RolPermisoService {
 		// Asignar el nuevo permiso
 		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
 		User currentUser = authenticationService.getAuthenticatedUser();
-		Permiso nuevoPermiso = permisoRepository.findById(nuevoPermisoId)
+		Permiso nuevoPermiso = permisoRepository.findByIdInAndAdminEmpresaTrue(List.of(nuevoPermisoId)).stream().findFirst()
 			.orElseThrow(() -> new RuntimeException("Permiso destino no encontrado con ID: " + nuevoPermisoId));
+
+		asegurarModuloEmpresaActivo(empresaId, List.of(nuevoPermiso));
 
 		RolPermiso rolPermiso = RolPermiso.builder()
 			.empresaRol(empresaRol)
@@ -370,20 +507,33 @@ public class RolPermisoService {
 	@Transactional
 	public RolPermisoAsignadoResponse reemplazarModuloPermisosDeEmpresaRol(Long rolId, Long moduloIdActual,
 			Long nuevoModuloId) {
-
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		return reemplazarModuloPermisosDeEmpresaRol(rolId, moduloIdActual, nuevoModuloId, empresaId);
+	}
+
+	@Transactional
+	public RolPermisoAsignadoResponse reemplazarModuloPermisosDeEmpresaRol(Long rolId, Long moduloIdActual,
+			Long nuevoModuloId, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
+
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
 		// Obtener permisos del módulo actual asignados a este rol
-		List<Permiso> permisosActuales = permisoRepository.findPermisosByModuloId(moduloIdActual);
+		List<Permiso> permisosActuales = permisoRepository.findPermisosByModuloIdAndAdminEmpresaTrue(moduloIdActual);
 		if (permisosActuales.isEmpty()) {
 			throw new RuntimeException("No hay permisos del módulo actual asignados a este rol");
 		}
 
 		// Filtrar solo los que están asignados a este rol-empresa
+		List<Long> permisoIdsActuales = permisosActuales.stream().map(Permiso::getId).toList();
+		Set<Long> permisoIdsAsignadosSet = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), permisoIdsActuales);
+
 		List<Long> permisoIdsAsignados = permisosActuales.stream()
-			.filter(p -> rolPermisoRepository.existsByEmpresaRolIdAndPermisoId(empresaRol.getId(), p.getId()))
 			.map(Permiso::getId)
+			.filter(permisoIdsAsignadosSet::contains)
 			.toList();
 
 		if (permisoIdsAsignados.isEmpty()) {
@@ -391,10 +541,12 @@ public class RolPermisoService {
 		}
 
 		// Obtener permisos del nuevo módulo
-		List<Permiso> permisosNuevos = permisoRepository.findPermisosByModuloId(nuevoModuloId);
+		List<Permiso> permisosNuevos = permisoRepository.findPermisosByModuloIdAndAdminEmpresaTrue(nuevoModuloId);
 		if (permisosNuevos.isEmpty()) {
 			throw new RuntimeException("El nuevo módulo no tiene permisos disponibles");
 		}
+
+		asegurarModuloEmpresaActivo(empresaId, permisosNuevos);
 
 		// Quitar todos los permisos del módulo actual
 		rolPermisoRepository.deleteByEmpresaRolIdAndPermisoIds(empresaRol.getId(), permisoIdsAsignados);
@@ -403,20 +555,26 @@ public class RolPermisoService {
 		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
 		User currentUser = authenticationService.getAuthenticatedUser();
 
-		int permisosAsignados = 0;
-		for (Permiso permiso : permisosNuevos) {
-			if (!rolPermisoRepository.existsByEmpresaRolIdAndPermisoId(empresaRol.getId(), permiso.getId())) {
-				RolPermiso rolPermiso = RolPermiso.builder()
-					.empresaRol(empresaRol)
-					.permiso(permiso)
-					.estado(estadoActivo)
-					.createdBy(currentUser)
-					.createdAt(Instant.now())
-					.build();
-				rolPermisoRepository.save(rolPermiso);
-				permisosAsignados++;
-			}
+		List<Long> nuevosPermisoIds = permisosNuevos.stream().map(Permiso::getId).toList();
+		Set<Long> permisosNuevosYaAsignados = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), nuevosPermisoIds);
+
+		List<RolPermiso> nuevosRolPermisos = permisosNuevos.stream()
+			.filter(permiso -> !permisosNuevosYaAsignados.contains(permiso.getId()))
+			.map(permiso -> RolPermiso.builder()
+				.empresaRol(empresaRol)
+				.permiso(permiso)
+				.estado(estadoActivo)
+				.createdBy(currentUser)
+				.createdAt(Instant.now())
+				.build())
+			.toList();
+
+		if (!nuevosRolPermisos.isEmpty()) {
+			rolPermisoRepository.saveAll(nuevosRolPermisos);
 		}
+
+		int permisosAsignados = nuevosRolPermisos.size();
 
 		List<String> modulos = permisosNuevos.stream().map(p -> p.getModulo().getNombre()).distinct().toList();
 
@@ -435,6 +593,14 @@ public class RolPermisoService {
 	public void quitarPermisosDeEmpresaRol(Long rolId, List<Long> permisoIds) {
 
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		quitarPermisosDeEmpresaRol(rolId, permisoIds, empresaId);
+	}
+
+	@Transactional
+	public void quitarPermisosDeEmpresaRol(Long rolId, List<Long> permisoIds, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
 
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
@@ -454,29 +620,49 @@ public class RolPermisoService {
 			List<ModuloMetodoRequest> modulosMetodos) {
 
 		Long empresaId = userEmpresaService.getEmpresaIdFromCurrentRequest();
+		return asignarModulosPermisosConMetodos(rolId, modulosMetodos, empresaId);
+	}
+
+	@Transactional
+	public RolPermisoAsignadoResponse asignarModulosPermisosConMetodos(Long rolId,
+			List<ModuloMetodoRequest> modulosMetodos, Long empresaId) {
+		if (empresaId == null) {
+			throw new IllegalArgumentException("empresaId no puede ser null");
+		}
 		EmpresaRol empresaRol = entidadValidatorFacade.validarRolDeEmpresaActivo(empresaId, rolId);
 
 		Set<Long> permisoIdsToAssign = new HashSet<>();
 		List<Permiso> permisosToAssign = new ArrayList<>();
 
+		List<Long> modulosIds = modulosMetodos.stream()
+			.map(ModuloMetodoRequest::getModuloId)
+			.filter(java.util.Objects::nonNull)
+			.distinct()
+			.toList();
+
+		Map<Long, List<Permiso>> permisosPorModulo = permisoRepository
+			.findPermisosByModulosIdsAndAdminEmpresaTrue(modulosIds)
+			.stream()
+			.collect(Collectors.groupingBy(p -> p.getModulo().getId()));
+
 		for (ModuloMetodoRequest mm : modulosMetodos) {
-			List<Permiso> permisosModulo = permisoRepository.findPermisosByModuloId(mm.getModuloId());
+			List<Permiso> permisosModulo = permisosPorModulo.getOrDefault(mm.getModuloId(), Collections.emptyList());
 			if (permisosModulo == null || permisosModulo.isEmpty())
 				continue;
 
-			Set<String> métodos = mm.getMetodos()
+			Set<String> metodos = mm.getMetodos()
 				.stream()
 				.map(m -> m == null ? "" : m.trim().toUpperCase())
 				.collect(Collectors.toSet());
 
-			boolean all = métodos.contains("ALL");
-			boolean readRequested = métodos.contains("READ");
+			boolean all = metodos.contains("ALL");
+			boolean readRequested = metodos.contains("READ");
 
 			for (Permiso p : permisosModulo) {
 				boolean include = false;
 				if (all)
 					include = true;
-				else if (p.getMetodo() != null && métodos.contains(p.getMetodo().getNombre().toUpperCase()))
+				else if (p.getMetodo() != null && metodos.contains(p.getMetodo().getNombre().toUpperCase()))
 					include = true;
 				else if (readRequested && ((p.getMetodo() != null && "GET".equalsIgnoreCase(p.getMetodo().getNombre()))
 						|| (p.getAutoridad() != null && p.getAutoridad().toUpperCase().contains("READ"))))
@@ -493,20 +679,28 @@ public class RolPermisoService {
 			throw new RuntimeException("No se encontraron permisos para los módulos/metodos solicitados");
 		}
 
+		asegurarModuloEmpresaActivo(empresaId, permisosToAssign);
+
 		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
 		User currentUser = authenticationService.getAuthenticatedUser();
 
-		for (Permiso permiso : permisosToAssign) {
-			if (!rolPermisoRepository.existsByEmpresaRolIdAndPermisoId(empresaRol.getId(), permiso.getId())) {
-				RolPermiso rp = RolPermiso.builder()
-					.empresaRol(empresaRol)
-					.permiso(permiso)
-					.estado(estadoActivo)
-					.createdBy(currentUser)
-					.createdAt(Instant.now())
-					.build();
-				rolPermisoRepository.save(rp);
-			}
+		List<Long> validPermisoIds = permisosToAssign.stream().map(Permiso::getId).toList();
+		Set<Long> permisosYaAsignados = rolPermisoRepository
+			.findPermisoIdsByEmpresaRolIdAndPermisoIdIn(empresaRol.getId(), validPermisoIds);
+
+		List<RolPermiso> nuevosPermisos = permisosToAssign.stream()
+			.filter(permiso -> !permisosYaAsignados.contains(permiso.getId()))
+			.map(permiso -> RolPermiso.builder()
+				.empresaRol(empresaRol)
+				.permiso(permiso)
+				.estado(estadoActivo)
+				.createdBy(currentUser)
+				.createdAt(Instant.now())
+				.build())
+			.toList();
+
+		if (!nuevosPermisos.isEmpty()) {
+			rolPermisoRepository.saveAll(nuevosPermisos);
 		}
 
 		List<String> modulos = permisosToAssign.stream()
@@ -519,10 +713,63 @@ public class RolPermisoService {
 		return RolPermisoAsignadoResponse.builder()
 			.rolId(empresaRol.getRol().getId())
 			.rolNombre(empresaRol.getRol().getNombre())
-			.permisosAsignados(permisosToAssign.size())
+			.permisosAsignados(nuevosPermisos.size())
 			.modulos(modulos)
 			.autoridades(autoridades)
 			.build();
+	}
+
+	private void asegurarModuloEmpresaActivo(Long empresaId, List<Permiso> permisos) {
+		if (permisos == null || permisos.isEmpty()) {
+			return;
+		}
+
+		Set<Long> moduloIds = permisos.stream()
+			.map(Permiso::getModulo)
+			.filter(java.util.Objects::nonNull)
+			.map(Modulo::getId)
+			.filter(java.util.Objects::nonNull)
+			.collect(Collectors.toSet());
+
+		if (moduloIds.isEmpty()) {
+			return;
+		}
+
+		Set<Long> moduloIdsYaRelacionados = moduloEmpresaRepository
+			.findModuloIdsByEmpresaIdAndModuloIdIn(empresaId, moduloIds);
+
+		if (moduloIdsYaRelacionados == null) {
+			moduloIdsYaRelacionados = Collections.emptySet();
+		}
+
+		Set<Long> moduloIdsFaltantes = new HashSet<>(moduloIds);
+		moduloIdsFaltantes.removeAll(moduloIdsYaRelacionados);
+
+		if (moduloIdsFaltantes.isEmpty()) {
+			return;
+		}
+
+		Empresa empresa = Empresa.builder().id(empresaId).build();
+
+		Estado estadoActivo = entidadValidatorFacade.validarEstadoGeneral(EstadoConstantes.ESTADO_GENERAL_ACTIVO);
+
+		List<ModuloEmpresa> nuevasRelaciones = permisos.stream()
+			.map(Permiso::getModulo)
+			.filter(java.util.Objects::nonNull)
+			.filter(modulo -> modulo.getId() != null && moduloIdsFaltantes.contains(modulo.getId()))
+			.collect(Collectors.toMap(Modulo::getId, modulo -> modulo, (existente, ignored) -> existente))
+			.values()
+			.stream()
+			.map(modulo -> ModuloEmpresa.builder()
+				.empresa(empresa)
+				.modulo(modulo)
+				.estado(estadoActivo)
+				.build())
+			.toList();
+
+		if (!nuevasRelaciones.isEmpty()) {
+			moduloEmpresaRepository.saveAll(nuevasRelaciones);
+		}
 	}
 
 }
